feat: Add Styles for Mobile

--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
             <button id="submit-btn" color="primary">Submit</button>
           </div>
         </form>
+
+        <div class="complete">
+          <h4>Thanks for the RSVP!</h4>
+        </div>
       </div>
     </div>
 </body>
